--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
+.venv/
 .env
-__pycache__
+__pycache__/
 
+*.pyc
+*.pyo
+*.pyd
+*.db
+*.sqlite3
 # Created by https://www.toptal.com/developers/gitignore/api/flutter
 # Edit at https://www.toptal.com/developers/gitignore?templates=flutter
 
